Fix flickering, fiw animations, add preload

--- a/src/assets/style/base/base.styl
+++ b/src/assets/style/base/base.styl
@@ -10,6 +10,9 @@ html
   background-color: $black
   -webkit-font-smoothing: antialiased
 
+  &.html--loading
+    opacity: 0
+
 body
   overflow-x: hidden
   font-family: 'Montserrat', 'Lato', Helvetica, Arial, sans-serif
