--- a/src/assets/style/sections/info.styl
+++ b/src/assets/style/sections/info.styl
@@ -9,6 +9,7 @@ $gradientEnd = rgba($black, 1)
 
 .section-info
   margin: 100px 0
+  overflow-x: visible
 
   .section-wrapper
     display: flex
