--- a/src/assets/style/sections/title-background.styl
+++ b/src/assets/style/sections/title-background.styl
@@ -1,6 +1,9 @@
 @import '../base/colors.styl'
 @import '../base/sizes.styl'
 
+$delayCommon = .5s
+$delayReverse = 1s
+
 .section-title
   .head
     position: absolute
@@ -8,6 +11,9 @@
     bottom: 0
     left: 0
     right: 0
+    -webkit-backface-visibility: hidden
+    backface-visibility: hidden
+    -webkit-transform: translate3d(0,0,0)
 
   .head--bg
     position: absolute
@@ -18,6 +24,10 @@
     background-repeat: no-repeat
     background-position: center
     background-size: cover
+    -webkit-backface-visibility: hidden
+    backface-visibility: hidden
+    -webkit-transform: translateZ(0)
+    transform: translateZ(0)
 
   .head--bg-back
     background-image: url('../../images/title-background/back.png')
@@ -30,15 +40,15 @@
 
   .head--bg-g-on
     background-image: url('../../images/title-background/girlyanda-on.png')
-    animation: opacity .5s ease-out infinite alternate
+    animation: opacity .5s ease-out $delayCommon infinite alternate
 
   .head--bg-alert
     background-image: url('../../images/title-background/trevoga.png')
-    animation: opacity .5s ease-out infinite alternate
+    animation: opacity .5s ease-out $delayCommon infinite alternate
 
   .head--bg-dark
     background-color: rgba(0,0,0, .5)
-    animation: opacity .5s ease-out .5s infinite alternate
+    animation: opacity .5s ease-out $delayReverse infinite alternate
 
 @-webkit-keyframes opacity
   0%   {opacity:1;}
